# icepeak

./: .cirrus.yml  .envrc  .gitignore  .travis.yml  LICENSE  README.md  RELEASE.md  azure-pipelines.yml  bitbucket-pipelines.yml  cabal.project  cabal.project.freeze  default.nix  icepeak.cabal  package.yaml  pipeline.yml  release.nix
.buildkite/: pipeline.yml
.circleci/: config.yml
.semaphore/: install-nix-2.24.10.sha256  install-stack.2.7.3.sha256  prologue.sh  report-cronjob-failure.sh  report-cronjob-start.sh  report-cronjob-success.sh  semaphore.yml  vulnix-nightly.yml
app/: API.hs  Icepeak.hs  Websockets.hs
client/: package.yaml
client-haskell/: .gitignore  client.nix  default.nix  icepeak-client.cabal  icepeak-client.nix  package.yaml  stack.yaml
client-haskell/src/Icepeak/: Client.hs
client/src/Icepeak/: Client.hs
docs/: IcepeakProtocol.md  IcepeakProtocolMultiSub.md  data-management.md
icepeak-ts-client/: package-lock.json  package.json  readme.md  tsconfig.base.json
icepeak-ts-client/lib/: icepeak-basic.mts  icepeak-core.mts  icepeak-payload.mts  icepeak.mts  icepeak.ts  tsconfig.json  useIcepeak.mts  util.mts
icepeak-ts-client/lib2/: icepeak-core.mts  icepeak.mts  util.mts
icepeak-ts-client/test/: icepeak-core.spec.mts  icepeak.spec.mts  icepeak.spec.mts.old  icepeak.spec.ts  test-util.mts  tsconfig.json
integration-tests/: auth-test.sh  connection_test.py  listener.html  multiple_clients_test.py  persistence_test.py
nix/: haskell-overlay.nix  nix_sha256sums  nixpkgs-pinned.nix  nixpkgs.nix  overlay.nix  sources.json  websockets.nix
server/: .gitignore  binaries-only.nix  build.yml  default.nix  icepeak-server.nix  icepeak.cabal  icepeak.nix  package.yaml  server.nix  setup.yml  shell.nix  stack.yaml  test.yml  vulnix-ignorelist.toml
server/app/: Icepeak.hs  IcepeakTokenGen.hs
server/app/Icepeak/: Main.hs
server/app/IcepeakTokenGen/: Main.hs
server/ci/: stack.sh  stack.yml
server/integration-tests/: auth_stress_test.hs  connection_test.py  data-survives-crash.sh  data-survives-restart.sh  generate_test_token.hs  listener.html  multiple_clients_test.py  persistence_test.py  read_after_write_test.py  sqlite_test.hs  stress_test.hs  stress_test.py  test.db  using-different-ports.sh
server/src/: AccessControl.hs  Config.hs  Core.hs  CrashLogging.hs  HTTPMethodInvalid.hs  HttpServer.hs  JwtAuth.hs  JwtMiddleware.hs  Logger.hs  Metrics.hs  MetricsServer.hs  Persistence.hs  SentryLogging.hs  Server.hs  Store.hs  Subscription.hs  Types.hs  WebsocketServer.hs
server/src/Icepeak/Server/: AccessControl.hs  Config.hs  Core.hs  HTTPMethodInvalid.hs  HttpServer.hs  JwtAuth.hs  JwtMiddleware.hs  Logger.hs  Metrics.hs  MetricsServer.hs  Persistence.hs  SentryLogging.hs  Server.hs  Store.hs  Subscription.hs  WebsocketServer.hs
server/src/Icepeak/Server/WebsocketServer/: HandleClientMultiSubscription.hs  HandleClientSingleSubscription.hs  MultiSubscription.hs  Payload.hs  SingleSubscription.hs  Utils.hs
server/tests/: AccessControlSpec.hs  ApiSpec.hs  CoreSpec.hs  JwtSpec.hs  OrphanInstances.hs  PersistenceSpec.hs  RequestSpec.hs  SocketSpec.hs  Spec.hs  StoreSpec.hs  SubscriptionTreeSpec.hs
server/tests/Icepeak/Server/: AccessControlSpec.hs  ApiSpec.hs  CoreSpec.hs  JwtSpec.hs  MetricsServerSpec.hs  MultiSubscriptionSpec.hs  PersistenceSpec.hs  RequestSpec.hs  SocketSpec.hs  StoreSpec.hs  SubscriptionTreeSpec.hs
src/: Config.hs  Core.hs  Guardian.hs  HttpServer.hs  Logger.hs  MainLoop.hs  Server.hs  Store.hs  Subscription.hs  WebsocketServer.hs
tests/: ApiSpec.hs  PutSpec.hs  Spec.hs  StoreSpec.hs  SubscriptionTreeSpec.hs
