name:                icepeak
version:             0.0.0
synopsis:            Json store with notification support
homepage:            https://github.com/channable/icepeak
build-type:          Simple
cabal-version:       >=1.10

library
  default-language: Haskell2010
  hs-source-dirs:   src
  ghc-options:     -Wall -Werror -Wno-orphans -O2 -fno-ignore-asserts -funbox-strict-fields
  exposed-modules: MainLoop

  build-depends: aeson                >= 1.1  && < 1.2
               , async                >= 2.1  && < 2.2
               , base                 >= 4.8  && < 5.0
               , bytestring           >= 0.10 && < 0.11
               , containers           >= 0.5  && < 0.6
               , monad-logger         >= 0.3  && < 0.4
               , mtl                  >= 2.2  && < 2.3
               , network              >= 2.6  && < 2.7
               , stm                  >= 2.4  && < 2.5
               , text                 >= 1.2  && < 1.3
               , unordered-containers >= 0.2  && < 0.3
               , wai                  >= 3.2  && < 3.3
               , websockets           >= 0.12.0.0 && < 0.13.0.0

executable icepeak-websockets
  default-language: Haskell2010
  hs-source-dirs:   app
  main-is:          Websockets.hs
  -- Use the multi-threaded runtime (-threaded), and use as many threads as
  -- cores on the system (+RTS -N). The -I0 flag prevents high CPU usage when
  -- the process is idle, see http://stackoverflow.com/q/12886604/135889.
  ghc-options:      -Wall -Werror -O2 -threaded "-with-rtsopts=-N -I0"
  ghc-options:      -Wall -Werror

  build-depends: base >= 4.8 && < 5.0
               , icepeak

executable icepeak
  default-language: Haskell2010
  hs-source-dirs:   app
  main-is:          Icepeak.hs
  -- Use the multi-threaded runtime (-threaded), and use as many threads as
  -- cores on the system (+RTS -N). The -I0 flag prevents high CPU usage when
  -- the process is idle, see http://stackoverflow.com/q/12886604/135889.
  ghc-options:      -Wall -Werror -O2 -threaded "-with-rtsopts=-N -I0"
  ghc-options:      -Wall -Werror

  build-depends: base >= 4.8 && < 5.0
               , icepeak

test-suite spec
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  hs-source-dirs:   tests
  main-is:          Spec.hs
  ghc-options:      -Wall -Werror -Wno-orphans

  extra-modules: ApiSpec
               , SocketSpec

  build-depends: aeson                >= 1.1  && < 1.2
               , base                 >= 4.8  && < 5.0
               , bytestring           >= 0.10 && < 0.11
               , containers           >= 0.5  && < 0.6
               , hspec                >= 2.4  && < 2.5
               , hspec-core           >= 2.4  && < 2.5
               , hspec-expectations   >= 0.8  && < 0.9
               , hedgehog             >= 0.5  && < 0.6
               , unordered-containers >= 0.2  && < 0.3
               , monad-logger         >= 0.3  && < 0.4
               , mtl                  >= 2.2  && < 2.3
               , icepeak
