cabal-version: 1.12
name:          icepeak-client
version:       0.1.1
synopsis:
  Client library for Icepeak, a fast JSON document store with push notification support

homepage:      https://github.com/channable/icepeak
license:       BSD3
build-type:    Simple

library
  exposed-modules:  Icepeak.Client
  other-modules:    Paths_icepeak_client
  hs-source-dirs:   src
  ghc-options:
    -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates

  build-depends:
      aeson        >=2.1.2  && <2.2
    , base         >=4.17.2 && <4.18
    , binary       >=0.8.9  && <0.9
    , bytestring   >=0.11.5 && <0.12
    , exceptions   >=0.10.5 && <0.11
    , http-client  >=0.7.14 && <0.8
    , http-types   >=0.12.3 && <0.13
    , retry        >=0.9.3  && <0.10
    , text         >=2.0.2  && <2.1

  default-language: Haskell2010
