cabal-version: 1.12
name:          icepeak

-- Note: We follow the PVP here, required by Hackage
version:       2.0.0.0
synopsis:      A fast JSON document store with push notification support.
description:
  Icepeak is a fast JSON document store with push notification support.

category:      web
homepage:      https://github.com/channable/icepeak
bug-reports:   https://github.com/channable/icepeak/issues
author:        Channable
maintainer:    rkrzr
copyright:     (c) 2023, Channable
license:       BSD3
build-type:    Simple

library
  exposed-modules:
    Icepeak.Server.AccessControl
    Icepeak.Server.Config
    Icepeak.Server.Core
    Icepeak.Server.HTTPMethodInvalid
    Icepeak.Server.HttpServer
    Icepeak.Server.JwtAuth
    Icepeak.Server.JwtMiddleware
    Icepeak.Server.Logger
    Icepeak.Server.Metrics
    Icepeak.Server.MetricsServer
    Icepeak.Server.Persistence
    Icepeak.Server.SentryLogging
    Icepeak.Server.Server
    Icepeak.Server.Store
    Icepeak.Server.Subscription
    Icepeak.Server.WebsocketServer
    Icepeak.Server.WebsocketServer.SingleSubscription
    Icepeak.Server.WebsocketServer.MultiSubscription
    Icepeak.Server.WebsocketServer.Payload

  other-modules:    Paths_icepeak
  hs-source-dirs:   src
  ghc-options:
    -Wall -Wno-orphans -Wno-unused-top-binds -fno-ignore-asserts
    -funbox-strict-fields

  build-depends:
      aeson                      >=2.1.2  && <2.2
    , async                      >=2.2.4  && <2.3
    , base                       >=4.17.2 && <4.18
    , bytestring                 >=0.11.5 && <0.12
    , clock                      >=0.8.4  && <0.9
    , containers                 >=0.6.7  && <0.7
    , directory                  >=1.3.7  && <1.4
    , hashable                   >=1.4.3  && <1.5
    , http-types                 >=0.12.3 && <0.13
    , jwt                        >=0.11.0 && <0.12
    , monad-logger               >=0.3.40 && <0.4
    , mtl                        >=2.2.2  && <2.3
    , network                    >=3.1.4  && <3.2
    , optparse-applicative       >=0.17.1 && <0.18
    , prometheus-client          >=1.1.1  && <1.2
    , prometheus-metrics-ghc     >=1.0.1  && <1.1
    , random                     >=1.2.1  && <1.3
    , raven-haskell              >=0.1.4  && <0.2
    , scotty                     >=0.12.1 && <0.13
    , securemem                  >=0.1.10 && <0.2
    , sqlite-simple              >=0.4.18 && <0.5
    , stm                        >=2.5.1  && <2.6
    , text                       >=2.0.2  && <2.1
    , time                       >=1.12.2 && <1.13
    , unix                       >=2.7.3  && <2.8
    , unordered-containers       >=0.2.19 && <0.3
    , uuid                       >=1.3.15 && <1.4
    , wai                        >=3.2.3  && <3.3
    , wai-extra                  >=3.1.13 && <3.2
    , wai-middleware-prometheus  >=1.0.0  && <1.1
    , wai-websockets             >=3.0.1  && <3.1
    , warp                       >=3.3.25 && <3.4
    , websockets                 >=0.12.7 && <0.13

  default-language: Haskell2010

executable icepeak
  main-is:          Main.hs
  other-modules:    Paths_icepeak
  hs-source-dirs:   app/Icepeak
  ghc-options:      -Wall -O2 -threaded -rtsopts "-with-rtsopts=-N -I0"
  build-depends:
      aeson                      >=2.1.2  && <2.2
    , async                      >=2.2.4  && <2.3
    , base                       >=4.17.2 && <4.18
    , bytestring                 >=0.11.5 && <0.12
    , clock                      >=0.8.4  && <0.9
    , containers                 >=0.6.7  && <0.7
    , directory                  >=1.3.7  && <1.4
    , hashable                   >=1.4.3  && <1.5
    , http-types                 >=0.12.3 && <0.13
    , icepeak
    , jwt                        >=0.11.0 && <0.12
    , monad-logger               >=0.3.40 && <0.4
    , mtl                        >=2.2.2  && <2.3
    , network                    >=3.1.4  && <3.2
    , optparse-applicative       >=0.17.1 && <0.18
    , prometheus-client          >=1.1.1  && <1.2
    , prometheus-metrics-ghc     >=1.0.1  && <1.1
    , random                     >=1.2.1  && <1.3
    , raven-haskell              >=0.1.4  && <0.2
    , scotty                     >=0.12.1 && <0.13
    , securemem                  >=0.1.10 && <0.2
    , sqlite-simple              >=0.4.18 && <0.5
    , stm                        >=2.5.1  && <2.6
    , text                       >=2.0.2  && <2.1
    , time                       >=1.12.2 && <1.13
    , unix                       >=2.7.3  && <2.8
    , unordered-containers       >=0.2.19 && <0.3
    , uuid                       >=1.3.15 && <1.4
    , wai                        >=3.2.3  && <3.3
    , wai-extra                  >=3.1.13 && <3.2
    , wai-middleware-prometheus  >=1.0.0  && <1.1
    , wai-websockets             >=3.0.1  && <3.1
    , warp                       >=3.3.25 && <3.4
    , websockets                 >=0.12.7 && <0.13

  default-language: Haskell2010

executable icepeak-token-gen
  main-is:          Main.hs
  other-modules:    Paths_icepeak
  hs-source-dirs:   app/IcepeakTokenGen
  ghc-options:      -Wall
  build-depends:
      aeson                      >=2.1.2  && <2.2
    , async                      >=2.2.4  && <2.3
    , base                       >=4.17.2 && <4.18
    , bytestring                 >=0.11.5 && <0.12
    , clock                      >=0.8.4  && <0.9
    , containers                 >=0.6.7  && <0.7
    , directory                  >=1.3.7  && <1.4
    , hashable                   >=1.4.3  && <1.5
    , http-types                 >=0.12.3 && <0.13
    , icepeak
    , jwt                        >=0.11.0 && <0.12
    , monad-logger               >=0.3.40 && <0.4
    , mtl                        >=2.2.2  && <2.3
    , network                    >=3.1.4  && <3.2
    , optparse-applicative       >=0.17.1 && <0.18
    , prometheus-client          >=1.1.1  && <1.2
    , prometheus-metrics-ghc     >=1.0.1  && <1.1
    , random                     >=1.2.1  && <1.3
    , raven-haskell              >=0.1.4  && <0.2
    , scotty                     >=0.12.1 && <0.13
    , securemem                  >=0.1.10 && <0.2
    , sqlite-simple              >=0.4.18 && <0.5
    , stm                        >=2.5.1  && <2.6
    , text                       >=2.0.2  && <2.1
    , time                       >=1.12.2 && <1.13
    , unix                       >=2.7.3  && <2.8
    , unordered-containers       >=0.2.19 && <0.3
    , uuid                       >=1.3.15 && <1.4
    , wai                        >=3.2.3  && <3.3
    , wai-extra                  >=3.1.13 && <3.2
    , wai-middleware-prometheus  >=1.0.0  && <1.1
    , wai-websockets             >=3.0.1  && <3.1
    , warp                       >=3.3.25 && <3.4
    , websockets                 >=0.12.7 && <0.13

  default-language: Haskell2010

test-suite spec
  type:             exitcode-stdio-1.0
  main-is:          Spec.hs
  other-modules:
    Icepeak.Server.AccessControlSpec
    Icepeak.Server.ApiSpec
    Icepeak.Server.CoreSpec
    Icepeak.Server.JwtSpec
    Icepeak.Server.PersistenceSpec
    Icepeak.Server.RequestSpec
    Icepeak.Server.SocketSpec
    Icepeak.Server.StoreSpec
    Icepeak.Server.SubscriptionTreeSpec
    Icepeak.Server.MultiSubscriptionSpec
    OrphanInstances
    Paths_icepeak

  hs-source-dirs:   tests
  ghc-options:      -Wall -Wno-orphans
  build-depends:
      aeson
    , async
    , base
    , bytestring
    , clock
    , containers
    , directory
    , hashable
    , hspec
    , hspec-core
    , hspec-expectations
    , hspec-wai
    , http-types
    , icepeak
    , jwt
    , monad-logger
    , mtl
    , network
    , optparse-applicative
    , prometheus-client
    , prometheus-metrics-ghc
    , QuickCheck
    , quickcheck-instances
    , random
    , raven-haskell
    , scotty
    , securemem
    , sqlite-simple
    , stm
    , text
    , time
    , unix
    , unordered-containers
    , uuid
    , wai
    , wai-extra
    , wai-middleware-prometheus
    , wai-websockets
    , warp
    , websockets
    , hspec-expectations-json

  default-language: Haskell2010
